--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^8.2.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.23.6",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -16,10 +19,13 @@
     "gulp-rename": "^1.2.2",
     "gulp-svg-sprite": "^1.3.1",
     "gulp-watch": "^5.0.0",
+    "postcss-hexrgba": "^1.0.1",
     "postcss-import": "^11.1.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^3.0.0",
-    "postcss-simple-vars": "^4.1.0"
+    "postcss-simple-vars": "^4.1.0",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
