--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "gulpfile.js",
   "dependencies": {
     "jquery": "^3.3.1",
+    "lazysizes": "^4.0.2",
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {
