--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "jquery": "^3.3.1",
     "lazysizes": "^4.0.2",
-    "normalize.css": "^8.0.0"
+    "normalize.css": "^8.0.0",
+    "picturefill": "^3.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^8.2.0",
@@ -16,9 +17,11 @@
     "browser-sync": "^2.23.6",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-modernizr": "^2.0.4",
     "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-svg-sprite": "^1.3.1",
+    "gulp-svg2png": "^2.0.2",
     "gulp-watch": "^5.0.0",
     "jquery-smooth-scroll": "^2.2.0",
     "postcss-hexrgba": "^1.0.1",
