--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
     "browser-sync": "^2.23.6",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
+    "gulp-cache": "^1.0.2",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^4.1.0",
     "gulp-modernizr": "^2.0.4",
     "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-rev": "^8.1.1",
     "gulp-svg-sprite": "^1.3.1",
     "gulp-svg2png": "^2.0.2",
+    "gulp-uglify": "^3.0.0",
+    "gulp-usemin": "^0.3.29",
     "gulp-watch": "^5.0.0",
     "jquery-smooth-scroll": "^2.2.0",
     "postcss-hexrgba": "^1.0.1",
